--- a/WebInterface/index.html
+++ b/WebInterface/index.html
@@ -12,6 +12,7 @@
 	<link href="main.css" rel="stylesheet" type="text/css" media="screen"/>
 	<link href="seekbarStyle.css" rel="stylesheet" type="text/css" media="screen"/>
 
+	<script type="text/javascript" src="mediaHandler.js"></script>
 	<script type="text/javascript" src="main.js"></script>
 
 </head>
@@ -36,6 +37,7 @@
 			</div>
 			<div id="queueContainer">
 				<h3>Queue</h3>
+				<button style="float: right;" onclick="deleteQueue()"><img src="Assets/ic_delete_black.svg"/></button>
 				<hr>
 				<div id="queue">
 					<i>Queue is empty</i>
