--- a/WebInterface/index.html
+++ b/WebInterface/index.html
@@ -27,6 +27,7 @@
 		<div id="main">
 			<div id="songsContainer">
 				<h3>Songs</h3>
+				<button style="float: right;" onclick=""><img src="Assets/ic_search_black.svg"></button>
 				<hr>
 				<div id="songs"></div>
 			</div>
@@ -49,9 +50,9 @@
 
 			<div id="mainControls">
 				<div>
-					<button><img src="Assets/ic_skip_previous_white.svg"></button>
+					<button onclick="previus()"><img src="Assets/ic_skip_previous_white.svg"></button>
 					<button id="toggleBtn"><img src="Assets/ic_play_arrow_white.svg"></button>
-					<button><img src="Assets/ic_skip_next_white.svg"></button>
+					<button onclick="next()"><img src="Assets/ic_skip_next_white.svg"></button>
 				</div>
 				<div style="width: 50%; white-space: nowrap; overflow: hidden;">
 					<p id="songName" style="width: 100%; text-overflow: ellipsis; overflow: hidden;"></p>
