--- a/WebInterface/index.html
+++ b/WebInterface/index.html
@@ -50,7 +50,7 @@
 			<div id="mainControls">
 				<div>
 					<button onclick="previus()"><img src="Assets/ic_skip_previous_white.svg"></button>
-					<button id="toggleBtn"><img src="Assets/ic_play_arrow_white.svg"></button>
+					<button id="toggleBtn"><img src="Assets/ic_play_arrow_white.svg"></button> <!-- onclick="playSong(queue[queueIndex], true)" -->
 					<button onclick="next()"><img src="Assets/ic_skip_next_white.svg"></button>
 				</div>
 				<div style="width: 50%; white-space: nowrap; overflow: hidden;">
