--- a/WebInterface/index.html
+++ b/WebInterface/index.html
@@ -5,6 +5,7 @@
 	<!--
 		TODO: Add toast API
 		TODO: When new file is loaded update the max value for the range
+		TODO: Delete option per item for queue
 	-->
 
 	<title>Music Stream</title>
@@ -20,7 +21,8 @@
 
 	<header>
 		<div><h1>Music</h1></div>
-		<div id="search"><img src="Assets/ic_search_white.svg"></div>
+		<div id="searchBar"><input type="text" id="searchInp"></div>
+		<div id="searchBtn"><img src="Assets/ic_search_white.svg"></div>
 	</header>
 
 	<main>
