--- a/WebInterface/index.html
+++ b/WebInterface/index.html
@@ -4,8 +4,8 @@
 
 	<!--
 		TODO: Add toast API
-		TODO: When new file is loaded update the max value for the range
 		TODO: Delete option per item for queue
+		TODO: Sort by artist
 	-->
 
 	<title>Music Stream</title>
