--- a/WebInterface/index.html
+++ b/WebInterface/index.html
@@ -29,7 +29,7 @@
 		<div id="main">
 			<div id="songsContainer">
 				<h3>Songs</h3>
-				<button title="Add whole list to queue" style="float: right;" onclick="addWholeListToQueue()"><img src="Assets/ic_playlist_add_black.svg"></button>
+				<button title="Add whole list to queue" style="float: right;" onclick="addWholeSongsToQueue()"><img src="Assets/ic_playlist_add_black.svg"></button>
 				<hr>
 				<div id="songs"></div>
 			</div>
