--- a/WebInterface/index.html
+++ b/WebInterface/index.html
@@ -6,6 +6,7 @@
 		TODO: Add toast API
 		TODO: Delete option per item for queue
 		TODO: Sort by artist
+		TODO: When accessing the LastFM data make it so the player can pop up and display the data
 	-->
 
 	<title>Music Stream</title>
