--- a/WebInterface/index.html
+++ b/WebInterface/index.html
@@ -4,8 +4,7 @@
 
 	<!--
 		TODO: Add toast API
-		TODO: Sort by artist
-		TODO: When accessing the LastFM data make it so the player can pop up and display the data
+		TODO: Add special 'most listened to' playlist
 	-->
 
 	<title>Music Stream</title>
@@ -84,7 +83,7 @@
 					<p id="songName" style="width: 100%; text-overflow: ellipsis; overflow: hidden;"></p>
 				</div>
 				<div>
-					<button id="showData"><img src="Assets/ic_repeat_white.svg"></button>
+					<button id="showData"><img src="Assets/ic_keyboard_arrow_up_white.svg"></button>
 					<button id="repeat"><img src="Assets/ic_repeat_white.svg"></button>
 					<button id="shuffle"><img src="Assets/ic_shuffle_white.svg"></button>
 				</div>
