--- a/WebInterface/index.html
+++ b/WebInterface/index.html
@@ -4,7 +4,9 @@
 
 	<!--
 		TODO: Add toast API
+		TODO: Add a random button at songs array
 		TODO: Add special 'most listened to' playlist
+		TODO: Only search for artist at beginning of the song
 	-->
 
 	<title>Music Stream</title>
@@ -63,6 +65,7 @@
 			<div id="songsContainer">
 				<h3>Songs</h3>
 				<button title="Add whole list to queue (only use when you're confident in your system)" style="float: right;" onclick="addWholeSongsToQueue()"><img src="Assets/ic_playlist_add_black.svg"></button>
+				<button title="Pick random" style="float: right;" onclick="pickRandomSong()"><img src="Assets/ic_random_black.svg"></button>
 				<hr>
 				<div id="songs"></div>
 			</div>
