--- a/WebInterface/createPlaylist.html
+++ b/WebInterface/createPlaylist.html
@@ -106,6 +106,10 @@
 					} else alert('The playlist is to short. We cannot accept that :/');
 				} else alert('Your playlist name is empty');
 			});
+
+			document.getElementById('back').addEventListener('click', evt => {
+				window.location = window.location.host;
+			});
 		}
 
 		window.onload = load;
@@ -115,6 +119,7 @@
 <body>
 
 	<header>
+		<button id="back"><img src="Assets/ic_arrow_back_white.svg"></button>
 		<div style="padding-top: 5px"><h1>Create Playlist</h1></div>
 	</header>
 
