--- a/WebInterface/Audio/index.html
+++ b/WebInterface/Audio/index.html
@@ -31,8 +31,8 @@
 	<meta name="msapplication-navbutton-color" content="#16a085"/>
 	<meta name="apple-mobile-web-app-status-bar-style" content="#16a085"/>
 
+	<link href="all.css" rel="stylesheet" type="text/css" media="screen"/>
 	<link href="main.css" rel="stylesheet" type="text/css" media="screen"/>
-	<link href="header.css" rel="stylesheet" type="text/css" media="screen"/>
 	<link href="seekbarStyle.css" rel="stylesheet" type="text/css" media="screen"/>
 
 	<script type="text/javascript" src="mediaHandler.js"></script>
@@ -61,7 +61,9 @@
 				<button title="Add whole list to queue (only use when you're confident in your system)" style="float: right;" onclick="addWholeSongsToQueue()"><img src="Assets/ic_playlist_add_black.svg"></button>
 				<button title="Pick random" style="float: right;" onclick="pickRandomSong()"><img src="Assets/ic_random_black.svg"></button>
 				<hr>
-				<div id="songs"></div>
+				<div id="songs">
+					<div class="ball-scale-multiple"><div></div><div></div><div></div></div>
+				</div>
 			</div>
 			<div id="playlistsContainer">
 				<h3>Playlists</h3>
@@ -87,7 +89,7 @@
 					<button onclick="next()"><img src="Assets/ic_skip_next_white.svg"></button>
 				</div>
 				<div style="width: 50%; white-space: nowrap; overflow: hidden;">
-					<p id="songName" style="width: 100%; text-overflow: ellipsis; overflow: hidden;"></p>
+					<p id="songName" style="width: 100%; text-overflow: ellipsis; overflow: hidden; padding: 5px 0"></p>
 				</div>
 				<div id="right">
 					<button id="showData"><img src="Assets/ic_keyboard_arrow_up_white.svg"></button>
