--- a/WebInterface/Video/index.html
+++ b/WebInterface/Video/index.html
@@ -31,8 +31,8 @@
 	<meta name="msapplication-navbutton-color" content="#16a085"/>
 	<meta name="apple-mobile-web-app-status-bar-style" content="#16a085"/>
 
+	<link href="all.css" rel="stylesheet" type="text/css" media="screen"/>
 	<link href="main.css" rel="stylesheet" type="text/css" media="screen"/>
-	<link href="header.css" rel="stylesheet" type="text/css" media="screen"/>
 
 	<script type="text/javascript" src="main.js"></script>
 
