--- a/WebInterface/Audio/index.html
+++ b/WebInterface/Audio/index.html
@@ -73,6 +73,7 @@
 			<div id="queueContainer">
 				<h3>Queue</h3>
 				<button title="Empty queue" style="float: right;" onclick="deleteQueue()"><img src="Assets/ic_clear_all_black.svg"/></button>
+				<button title="Save to playlist" style="float: right;" onclick="saveQueueToPlaylist()"><img src="Assets/ic_save_black.svg"/></button>
 				<hr>
 				<div id="queue">
 					<i>Queue is empty</i>
