--- a/WebInterface/Audio/index.html
+++ b/WebInterface/Audio/index.html
@@ -67,6 +67,7 @@
 			</div>
 			<div id="playlistsContainer">
 				<h3>Playlists</h3>
+				<button title="Create playlist" style="float: right;" onclick="window.location = '/createPlaylist.html'"><img src="Assets/ic_add_black.svg"></button>
 				<hr>
 				<div id="playlists"></div>
 			</div>
