--- a/WebInterface/downloadYoutube.html
+++ b/WebInterface/downloadYoutube.html
@@ -253,14 +253,18 @@
 				const data = {
 					url: document.getElementById('link').value,
 					fileName: document.getElementById('artist').value + ' - ' + document.getElementById('title').value,
-					tags: {
+				}
+
+				if (document.getElementById('use_tags').checked) {
+					data.tags = {
 						title: document.getElementById('title').value,
 						album: document.getElementById('album').value,
 						artist: document.getElementById('artist').value
 					}
+
+					if (document.getElementById('uiac').checked) data.tags.image = document.querySelector('img').src;
 				}
 
-				if (document.getElementById('uiac').checked) data.tags.image = document.querySelector('img').src;
 				document.getElementById('videoInput').innerHTML = '<b>Downloading... This may take a while.</b>';
 				fetch('/ytdl', {method: "POST", body: JSON.stringify(data)}).then(response => {
 					response.json().then(json => {
@@ -299,13 +303,15 @@
 			<div id="videoInput">
 				<h2>Video Tags</h2>
 
+				<input type="checkbox" id="use_tags" checked>
+				<label for="uiac">Use tags</label><br>
 				<label for="title">Title</label>
 				<input type="text" id="title"><br>
 				<label for="artist">Artist</label>
 				<input type="text" id="artist"><br>
 				<label for="album">Album</label>
 				<input type="text" id="album"><br>
-				<input type="checkbox" id="uiac" checked>
+				<input type="checkbox" id="uiac"> <!-- Checked? -->
 				<label for="uiac">Use image as cover</label>
 
 				<button id="save">Save</button>
