--- a/WebInterface/help.html
+++ b/WebInterface/help.html
@@ -95,6 +95,28 @@
 			transition: max-height .5s ease;
 		}
 
+		main #WAQ {
+			margin: 40px auto;
+			background-color: transparent;
+		}
+
+		main #WAQ > div {
+			padding: 0;
+			max-height: initial;
+		}
+
+		main #WAQ > div b {
+			width: 100%;
+			color: white;
+			padding: 10px;
+			display: block;
+			background-color: #16a085;
+		}
+
+		main #WAQ > div p {
+			margin-left: 15px;
+		}
+
 		footer {
 			left: 0;
 			bottom: 0;
@@ -309,6 +331,46 @@
 
 				<p>
 					It returns the video file. Requires a video file name after the last slash.
+				</p>
+			</div>
+		</div>
+
+
+		<div id="WAQ">
+			<h3>WAQ</h3>
+
+			<div>
+				<b>How do I set this up?</b>
+				<p>
+					There are four steps:
+
+					<ol>
+						<li>Install <a href="https://nodejs.org/en/download/package-manager/">node.js</a></li>
+						<li>Clone or download the <a href="https://github.com/jantje19/MusicStream/clone">Github repo</a></li>
+						<li>Within the directory run: <code>npm install &amp;&amp; npm start</code> in a command line</li>
+						<li>Go to <a href="http://localhost:8000">http://localhost:8000</a></li>
+					</ol>
+				</p>
+			</div>
+
+			<div>
+				<b>I have found a bug, what do I do?</b>
+				<p>
+					Bugs can be reported on the <a href="https://github.com/Jantje19/MusicStream/issues/new/">Github issue tracker</a> with the <i style="background-color: red">bug</i> label. Please be so thoughtful to try to recreate the bug and submit an as detailed as possible explaination. Screenshots are always appreciated.
+				</p>
+			</div>
+
+			<div>
+				<b>I have an amazing idea for this program</b>
+				<p>
+					Ideas are always welcome. You can add an <a href="https://github.com/Jantje19/MusicStream/issues/new/">issue on Github</a> with the <i style="background-color: yellow">idea</i> tag.
+				</p>
+			</div>
+
+			<div>
+				<b>Can I help the development?</b>
+				<p>
+					You sure can. All the support is greatly appreciated. I am currently maintaining this on my own. Every designer, product developer, software engenierer or other help is always helpfull. Even pointing out spelling mistakes is super useful. You can fork this project on <a href="https://github.com/jantje19/MusicStream/">Github</a>.
 				</p>
 			</div>
 		</div>
