--- a/WebInterface/help.html
+++ b/WebInterface/help.html
@@ -190,6 +190,9 @@
 					<li><b>Enter:</b> Play/pause song</li>
 					<li><b>Right Arrow:</b> Next song</li>
 					<li><b>Left Arrow:</b> Pervious song</li>
+					<li><b>Double click on song:</b> Add to queue and play</li>
+					<li><b>CTRL click on playlist:</b> Edit playlist</li>
+					<li><b>CTRL click on queue item:</b> Remove from queue</li>
 				</ul>
 
 				<hr>
